--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/logic.js"></script>
-    <script src="js/interface.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <meta charset="utf-8">
+    <script type="text/javascript" src='js/jquery-3.3.1.js'></script>
+    <script type="text/javascript" src='js/cats.json'></script>
+    <script type="text/javascript" src='js/logic.js'></script>
+    <script type="text/javascript" src='js/interface.js'></script>
+    <link rel='stylesheet' href='css/styles.css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+    <meta charset='utf-8'>
     <title>Katz's Cat Sanctuary</title>
   </head>
 
-  <div class="container">
+  <div class='container'>
     <header>
       <img src='assets/logo.svg'>
       <div class='tagline'>
@@ -20,65 +21,49 @@
     </header>
     <body>
       <div class='filter-memo'>
-        <h4 class="showing-results">Showing Results by: All</h4>
-        <p class="filter-tag">Filter</p>
+        <h4 class='showing-results'>Showing Results by: All</h4>
+        <p class='filter-tag'>Filter</p>
       </div>
 
-      <div class="filter-bar">
-          <select id='breed' name="breed" size="4">
-            <option value="Tabby">Tabby</option>
-            <option value="Aegean">Aegean</option>
-            <option value="American Curl">American Curl</option>
-            <option value="Dwarf cat">Dwarf cat</option>
+      <div class='filter-bar'>
+          <select id='breed' name='breed' size='4'>
+            <option value='Tabby'>Tabby</option>
+            <option value='Aegean'>Aegean</option>
+            <option value='American Curl'>American Curl</option>
+            <option value='Dwarf cat'>Dwarf cat</option>
           </select>
-          <select id='country' name="country" size="4">
-            <option value="USA">USA</option>
-            <option value="Germany">Germany</option>
-            <option value="France">France</option>
-            <option value="Italy">Italy</option>
+          <select id='country' name='country' size='4'>
+            <option value='USA'>USA</option>
+            <option value='Germany'>Germany</option>
+            <option value='France'>France</option>
+            <option value='Italy'>Italy</option>
           </select>
-          <select id='origin' name="origin" size="4">
-            <option value="USA">USA</option>
-            <option value="Germany">Germany</option>
-            <option value="France">France</option>
-            <option value="Italy">Italy</option>
+          <select id='origin' name='origin' size='4'>
+            <option value='USA'>USA</option>
+            <option value='Germany'>Germany</option>
+            <option value='France'>France</option>
+            <option value='Italy'>Italy</option>
           </select>
-          <select id='coat' name="coat" size="4">
-            <option value="USA">USA</option>
-            <option value="Germany">Germany</option>
-            <option value="France">France</option>
-            <option value="Italy">Italy</option>
+          <select id='coat' name='coat' size='4'>
+            <option value='USA'>USA</option>
+            <option value='Germany'>Germany</option>
+            <option value='France'>France</option>
+            <option value='Italy'>Italy</option>
           </select>
-          <select id='pattern' name="pattern" size="4">
-            <option value="USA">USA</option>
-            <option value="Germany">Germany</option>
-            <option value="France">France</option>
-            <option value="Italy">Italy</option>
+          <select id='pattern' name='pattern' size='4'>
+            <option value='USA'>USA</option>
+            <option value='Germany'>Germany</option>
+            <option value='France'>France</option>
+            <option value='Italy'>Italy</option>
           </select>
-          <button id='search' onClick="filterCats('breed', 'country', 'origin', 'coat', 'pattern')" name="search">Filter Cats</button>
+          <button id='search' onClick='filterCats('breed', 'country', 'origin', 'coat', 'pattern')' name='search'>Filter Cats</button>
       </div>
 
-        <div class='cat-card'>
-          <p class='card-breed'>Breed: Tabby</p>
-          <p class='card-country'>Country: America</p>
-          <p class='card-origin'>Origin: Hybrid</p>
-          <p class='card-coat'>Coat: Long</p>
-          <p class='card-pattern'>Pattern: Tabby</p>
+        <div id='cat-card-list'>
+
         </div>
-        <div class='cat-card'>
-          <p class='card-breed'>Breed: Tabby</p>
-          <p class='card-country'>Country: America</p>
-          <p class='card-origin'>Origin: Hybrid</p>
-          <p class='card-coat'>Coat: Long</p>
-          <p class='card-pattern'>Pattern: Tabby</p>
-        </div>
-        <div class='cat-card'>
-          <p class='card-breed'>Breed: Tabby</p>
-          <p class='card-country'>Country: America</p>
-          <p class='card-origin'>Origin: Hybrid</p>
-          <p class='card-coat'>Coat: Long</p>
-          <p class='card-pattern'>Pattern: Tabby</p>
-        </div>
+        <div id='page-number'></div>
+        <button type="button" onClick='nextPage()' name="button">More Results</button>
     </body>
   </div>
 </html>
