sucessfully search for multiple key values and clear fields.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
   <head>
     <script type="text/javascript" src='js/jquery-3.3.1.js'></script>
-    <script type="text/javascript" src='js/cats.json'></script>
-    <script type="text/javascript" src='js/logic.js'></script>
     <script type="text/javascript" src='js/interface.js'></script>
     <link rel='stylesheet' href='css/styles.css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
@@ -28,7 +26,7 @@
       <div class='filter-bar'>
         <p>Filter By Breed</p>
           <select id='breed' name='breed'>
-            <option value=" ">Breed</option>
+            <option value='breed'>Breed</option>
           </select>
 
           <p>Or filter by other data</p>
