--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <meta charset='utf-8'>
-    <title>Katz's Central Cat-a-base</title>
+    <title>Cat-a-Base</title>
   </head>
-
   <div class='container'>
     <header>
       <img src='assets/logo.svg'>
@@ -45,11 +44,10 @@
           </select>
           <button id='search' onClick='filterCats(breed, country, origin, coat, pattern)' name='search'>Filter Cats</button>
       </div>
-
-        <div id='cat-card-list' class='cards'>
-        </div>
-        <div id='cat-result-display' class='cards'>
-        </div>
+      <div id='cat-card-list' class='cards'>
+      </div>
+      <div id='cat-result-display' class='cards'>
+      </div>
     </body>
   </div>
 </html>
